--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
 
-URT_MONGO=mongodb://127.0.0.1:27017/adoptionSystem
+URT_MONGO=mongodb://127.0.0.1:27017/academicManager
 
 SECRETORPRIVATEKEY=Est03sMyPubl1cK3y1609
